--- a/CadastroProduto/appsettings.json
+++ b/CadastroProduto/appsettings.json
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Data Source=DESKTOP-KMCBAKN\\SQLEXPRESS;initial catalog=HKBD;persist security info=True;user id=sa;password=0l1v31r4;MultipleActiveResultSets=True;App=EntityFramework"
   }
 }
